[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/ubuntu50.tres" type="DynamicFont" id=1]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=2]
[ext_resource path="res://mocraClassic/parameters/control_binding/input_changer.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1420.0
margin_bottom = -1080.0
rect_min_size = Vector2( 1000, 150 )
script = ExtResource( 3 )

[node name="keyboardchangeButton" type="Button" parent="."]
margin_left = 428.0
margin_top = 46.5
margin_right = 528.0
margin_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "NA"

[node name="joystickchangeButton" type="Button" parent="."]
margin_left = 770.0
margin_top = 46.5
margin_right = 870.0
margin_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "NA"

[node name="mousechangeButton" type="Button" parent="."]
margin_left = 1020.0
margin_top = 46.5
margin_right = 1120.0
margin_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "NA"

[node name="nameLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -28.5
margin_right = 69.0
margin_bottom = 28.5
focus_neighbour_right = NodePath("../keyboardchangeButton")
custom_fonts/font = ExtResource( 1 )
text = "NA"

[connection signal="pressed" from="keyboardchangeButton" to="." method="_on_changeButton_pressed"]
[connection signal="pressed" from="joystickchangeButton" to="." method="_on_joystickchangeButton_pressed"]
[connection signal="pressed" from="mousechangeButton" to="." method="_on_mousechangeButton_pressed"]
